--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body
+  padding: 0
+  margin: 0
+  background-color: #F5F6F7
+
+form
+  box-shadow: 0px 5px 20px #171717a9
+  max-width: 400px
+  padding: 3rem
+  background: transaprent
+  border: 1px solid #9c9c9ca8
