--- a/src/app/components/products/all-products/all-products.component.html
+++ b/src/app/components/products/all-products/all-products.component.html
@@ -1,7 +1,6 @@
 <div class="products-component">
-  <div>
-
-    <table mat-table [dataSource]="products" class="mat-elevation-z8">
+  <div class="table-container mat-elevation-z8">
+    <table mat-table [dataSource]="products">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -11,22 +10,37 @@
         <td mat-cell *matCellDef="let element"> {{element.handle}} </td>
       </ng-container>
     
-      <!-- Name Column -->
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef> Title </th>
         <td mat-cell *matCellDef="let element"> {{element.title}} </td>
       </ng-container>
     
-      <!-- Weight Column -->
       <ng-container matColumnDef="stock">
         <th mat-header-cell *matHeaderCellDef> Stock </th>
         <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
       </ng-container>
     
-      <!-- Symbol Column -->
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef> Price </th>
         <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef> Edit </th>
+        <td mat-cell *matCellDef="let element"> 
+          <button mat-icon-button>
+            <mat-icon>{{'edit'}}</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef> Delete </th>
+        <td mat-cell *matCellDef="let element"> 
+          <button mat-icon-button (click)="deleteItem(element.id)">
+            <mat-icon>{{'delete'}}</mat-icon>
+          </button>
+        </td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -36,5 +50,7 @@
     <mat-paginator [length]="totalItems" [pageSize]="pageSize" (page)="onPageChange($event)">
     </mat-paginator>
   </div>
-  <!-- <button mat-button (click)="handleLogout()">Logout</button> -->
+  <button mat-icon-button (click)="handleLogout()" class="btn-logout">
+    <mat-icon>{{'logout'}}</mat-icon>
+  </button>
 </div>
