--- a/src/app/components/products/all-products/all-products.component.sass
+++ b/src/app/components/products/all-products/all-products.component.sass
@@ -2,6 +2,18 @@
   height: 100vh
   display: flex
   justify-content: center
-  padding: 3rem 10rem 3rem 10rem
-  .table-products
-    // margin-top: 200px
+  padding: 3rem 10rem 0rem 10rem
+  .table-container
+    height: fit-content
+    table
+      width: 1000px
+  .btn-logout
+    position: absolute
+    top: 20px
+    right: 20px
+    color: #171717
+    border-radius: 0
+    font-size: 14px
+    padding: 8px 0 8px 0
+    height: fit-content
+    box-shadow: none
