--- a/src/app/components/products/all-products/all-products.component.html
+++ b/src/app/components/products/all-products/all-products.component.html
@@ -1,34 +1,35 @@
 <div class="products-component">
+  <img src="https://haciendola.com/cdn/shop/files/logo_4052ea8c-c242-4a61-a83b-910d8214ffd8.png?v=1705680919&width=225" />
   <div class="table-container mat-elevation-z8">
     <table mat-table [dataSource]="products">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        <td (click)="viewItem(element.id)" mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
       <ng-container matColumnDef="handle">
         <th mat-header-cell *matHeaderCellDef> Handle </th>
-        <td mat-cell *matCellDef="let element"> {{element.handle}} </td>
+        <td (click)="viewItem(element.id)" mat-cell *matCellDef="let element"> {{element.handle}} </td>
       </ng-container>
     
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef> Title </th>
-        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        <td (click)="viewItem(element.id)" mat-cell *matCellDef="let element"> {{element.title}} </td>
       </ng-container>
     
       <ng-container matColumnDef="stock">
         <th mat-header-cell *matHeaderCellDef> Stock </th>
-        <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+        <td (click)="viewItem(element.id)" mat-cell *matCellDef="let element"> {{element.stock}} </td>
       </ng-container>
     
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef> Price </th>
-        <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        <td (click)="viewItem(element.id)" mat-cell *matCellDef="let element"> {{element.price}} </td>
       </ng-container>
 
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
         <td mat-cell *matCellDef="let element"> 
-          <button mat-icon-button>
+          <button mat-icon-button >
             <mat-icon>{{'edit'}}</mat-icon>
           </button>
         </td>
@@ -44,7 +45,11 @@
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+      >
+    </tr>
     </table>
     
     <mat-paginator [length]="totalItems" [pageSize]="pageSize" (page)="onPageChange($event)">
