--- a/src/app/components/products/all-products/all-products.component.sass
+++ b/src/app/components/products/all-products/all-products.component.sass
@@ -1,12 +1,32 @@
 .products-component
+  // width: 100%
   height: 100vh
   display: flex
+  flex-direction: column
   justify-content: center
-  padding: 3rem 10rem 0rem 10rem
+  align-items: center
+  padding: 1rem 10rem 0rem 10rem
+  img
+    width: 180px
+    height: 25px
+    margin-bottom: 40px
   .table-container
     height: fit-content
+    min-height: 632px
+    background: white
+    justify-content: space-between
+    display: flex
+    flex-direction: column
     table
       width: 1000px
+      .mat-mdc-row .mat-mdc-cell
+        border-bottom: 1px solid transparent
+        border-top: 1px solid transparent
+        cursor: pointer
+        
+      .mat-mdc-row:hover .mat-mdc-cell
+        border-color: #171717
+
   .btn-logout
     position: absolute
     top: 20px
