[ADD] adding udpdate component and success dialog

--- a/src/app/components/products/all-products/all-products.component.sass
+++ b/src/app/components/products/all-products/all-products.component.sass
@@ -1,5 +1,4 @@
 .products-component
-  // width: 100%
   height: 100vh
   display: flex
   flex-direction: column
@@ -25,7 +24,7 @@
         cursor: pointer
         
       .mat-mdc-row:hover .mat-mdc-cell
-        border-color: #171717
+        border-color: #EAEAEA
 
   .btn-logout
     position: absolute
