--- a/src/app/components/products/update-product/update-product.component.sass
+++ b/src/app/components/products/update-product/update-product.component.sass
@@ -1,21 +1,24 @@
-.product-component
+.update-product-component
   min-height: 100vh
   display: flex
-  padding: 6rem 0
-  background-color: white
-  width: 100%
+  justify-content: center
+  padding: 4rem 0
   box-sizing: border-box
+  form
+    box-shadow: 0px 5px 20px #919090a9
+    background: #FFF
+    mat-form-field
+      width: 100%
+    button
+      width: 100%
+      border-radius: 0px
+      background: #171717
+      margin-top: 20px
+      color: #FFF
   .btn-back-page
     position: absolute
     top: 20px
     left: 20px
-  .product-detail-container
-    background: #F5F6F7
-    border-top: 1px solid #EAEAEA
-    border-bottom: 1px solid #EAEAEA
-    padding: 3.3rem 8rem
-    width: 100%
-    height: fit-content
   .btn-logout
     position: absolute
     top: 20px
