--- a/src/app/components/users/login/login.component.html
+++ b/src/app/components/users/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-component">
+<section class="login-component">
   <img sizes="(max-width: 300px) 50vw, 150px" src="https://haciendola.com/cdn/shop/files/logo_4052ea8c-c242-4a61-a83b-910d8214ffd8.png?v=1705680919&width=225" />
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <p>
@@ -25,4 +25,4 @@
       You don't have an account? <a routerLink="/register" class="span-container__text"> Sign up</a>
     </div>
   </form>
-</div>
+</section>
