--- a/src/app/components/users/register/register.component.html
+++ b/src/app/components/users/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="register-component">
+<section class="register-component">
   <h1>SIGN UP</h1>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <p>
@@ -35,4 +35,4 @@
       <a routerLink="/login" class="span-container__text">Sign in</a>
     </div>
   </form>
-</div>
+</section>
