--- a/src/app/components/products/all-products/all-products.component.html
+++ b/src/app/components/products/all-products/all-products.component.html
@@ -1,4 +1,4 @@
-<div class="products-component">
+<section class="products-component">
   <img src="https://haciendola.com/cdn/shop/files/logo_4052ea8c-c242-4a61-a83b-910d8214ffd8.png?v=1705680919&width=225" />
   <div class="table-container mat-elevation-z8">
     <table mat-table [dataSource]="products">
@@ -29,7 +29,7 @@
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
         <td mat-cell *matCellDef="let element"> 
-          <button mat-icon-button >
+          <button mat-icon-button (click)="editItem(element.id)">
             <mat-icon>{{'edit'}}</mat-icon>
           </button>
         </td>
@@ -58,4 +58,4 @@
   <button mat-icon-button (click)="handleLogout()" class="btn-logout">
     <mat-icon>{{'logout'}}</mat-icon>
   </button>
-</div>
+</section>
