[ADD] adding create view

--- a/src/app/components/products/all-products/all-products.component.html
+++ b/src/app/components/products/all-products/all-products.component.html
@@ -58,4 +58,7 @@
   <button mat-icon-button (click)="handleLogout()" class="btn-logout">
     <mat-icon>{{'logout'}}</mat-icon>
   </button>
+  <button mat-icon-button (click)="createProduct()" class="btn-add-product">
+    <mat-icon>{{'add'}}</mat-icon>
+  </button>
 </section>
