--- a/src/app/components/products/all-products/all-products.component.sass
+++ b/src/app/components/products/all-products/all-products.component.sass
@@ -36,3 +36,14 @@
     padding: 8px 0 8px 0
     height: fit-content
     box-shadow: none
+
+  .btn-add-product
+    position: fixed
+    bottom: 50px
+    right: 20px
+    background: #171717
+    color: #F5F6F7
+    font-size: 14px
+    padding: 8px 0 8px 0
+    height: fit-content
+    box-shadow: 0px 0px 30px #171717a9
